Fix: resolve overflow

--- a/public/global.css
+++ b/public/global.css
@@ -105,6 +105,7 @@ section {
   width: 100%;
   margin-top: 50px;
   margin-bottom: 35px;
+  overflow-x: hidden;
 }
 
 .i-can-h-space {
